<resources>
    <string name="app_name">ICMProject1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="urfest">UrFest</string>
    <string name="i_already_have_an_account_sign_in">I already have an account - Sign in</string>
    <string name="login">LOGIN</string>
    <string name="usernameLogin">Username</string>
    <string name="urfestLogin">UrFest</string>
    <string name="i_don_t_have_an_account_yet_register">I don\'t have an account yet - Register</string>
    <string name="add_a_festival_to_your_profile">Add a Festival to your Profile</string>
    <string name="meo_sudoeste">Meo Sudoeste</string>
    <string name="odemira_portugal">Odemira, Portugal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Lineups Static Data -->
    <string-array name="artists">
        <item>Quim Barreiros</item>
        <item>Toni Carreira</item>
        <item>Wet Bed Gang</item>
        <item>Artic Monkeys</item>
        <item>Slow J</item>
        <item>J Balvin</item>
        <item>Richie Campbell</item>
        <item>Pedro Abrunhosa</item>
        <item>Rui Veloso</item>
    </string-array>

    <string-array name="stages">
        <item>Main Stage</item>
        <item>Secondary Stage</item>
    </string-array>

    <string-array name="festivals">
        <item>MEO Sudoeste</item>
        <item>Vodafone Paredes de Coura</item>
        <item>NOS Alive</item>
        <item>Rock in Rio</item>
        <item>NOS Primavera Sound</item>
    </string-array>

    <string-array name="locations">
        <item>Odemira, Portugal</item>
        <item>Paredes de Coura, Portugal</item>
        <item>Passeio Marítimo de Algés, Oeiras, Portugal</item>
        <item>Lisboa, Portugal</item>
        <item>Porto, Portugal</item>
    </string-array>

    <string-array name="coordinates">
        <item>37.55,-8.75</item>
        <item>41.92,-8.59</item>
        <item>38.69,-9.21</item>
        <item>38.72,-9.14</item>
        <item>41.15,-8.62</item>
    </string-array>

    <string-array name="users">
        <item>john123</item>
        <item>powerlol</item>
        <item>lilpump</item>
        <item>rose99</item>
    </string-array>

    <string-array name="users_location">
        <item>38.0122,-7.8653</item>
        <item>37.9877,-7.8905</item>
        <item>38.0221,-7.8684</item>
        <item>38.0004,-7.8444</item>
    </string-array>

    <string-array name="users_festivals">
        <item>MEO Sudoeste,Rock in Rio,NOS Primavera Sound</item>
        <item>Vodafone Paredes de Coura,MEO Sudoeste</item>
        <item>NOS Primavera Sound,NOS Alive</item>
        <item>Rock in Rio</item>
    </string-array>

    <string-array name="users_buddies">
        <item>powerlol,lilpump</item>
        <item>john123,rose99</item>
        <item>john123</item>
        <item>powerlol</item>
    </string-array>

</resources>